# csv2sql

./: DB_connector.hs  MyIO.hs  README.md  csv2sql.cabal  csv2sql.hs
SRC/: csv2sql.hs
SRC/App/: MyIO.hs  SqlMaker.hs
